# -Omnitrainer-multimodal-moderation

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md
evals/text/: test_cases.py
multimodal_moderation/: __init__.py  app.py  env.py  fastapi_app.py  gradio_app.py  tracing.py
multimodal_moderation/agents/: __init__.py  _shared.py  audio_agent.py  customer_agent.py  image_agent.py  text_agent.py  video_agent.py
multimodal_moderation/types/: __init__.py  model_choice.py  moderation_result.py
notebooks/: demo.ipynb
tests/: test_api.py  test_gradio_app.py  test_utils.py
